# spaCEinvaders

./: CMakeLists.txt  LICENSE  pom.xml
.swarm/: memory.db  memory.db-shm  memory.db-wal  schema.sql  state.json
client/include/: alien.h  bunker.h  bunker_visual.h  constants.h  efectos.h  game_state.h  json_utils.h  network.h  player.h  render.h  sprites.h
client/src/: alien.c  bunker.c  bunker_visual.c  efectos.c  game_state.c  json_utils.c  main.c  network.c  player.c  prueba_cliente.c  render.c  sprites.c
controller/src/: main.c
docs/: ~$cumentacion.docx
server/src/com/spaceinvaders/factory/: CalamarFactory.java  CangrejoFactory.java  ExtraterrestreFactory.java  PulpoFactory.java
server/src/com/spaceinvaders/model/: BalaAlien.java  BalaJugador.java  Bunker.java  Calamar.java  Cangrejo.java  EstadoJuego.java  Extraterrestre.java  Jugador.java  Ovni.java  Pulpo.java
server/src/com/spaceinvaders/network/: AdaptadorMensaje.java  ManejadorCliente.java  ManejadorEspectador.java
server/src/com/spaceinvaders/observer/: GameObserver.java  GameStateNotifier.java  GameSubject.java
server/src/com/spaceinvaders/server/: ConsolaAdmin.java  MotorJuego.java  ServidorJuego.java
server/src/com/spaceinvaders/test/: PruebaConexion.java
